syntax = "proto3";
option java_multiple_files = true;
package networking.request;

message RequestMessage {
  int32 id = 1;
  string name = 2;
  double price = 3;
  PageRequestMessage pageInfo = 4;
}

message PageRequestMessage {
  int32 pageNumber = 1;
  int32 pageSize = 2;
}